AWS/modules/security-group/main.tf
resource "aws_security_group" "public-sg" {

  name        = var.sg-name
  description = "Security group for public subnet"
  vpc_id      = var.vpc_id

  tags = {
    Name = var.sg-name
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]

  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]

  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]


  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]

  }

  tags_all = {
    "Name"      = "sg-public"
    "CreatedBy" = "Terraform"
  }
}
